(*
  SPDX-FileCopyrightText: 2019 TG x Thoth
  SPDX-License-Identifier: AGPL-3.0-only
*)

opam-version: "2.0"
name: "poldercast-lwt"
synopsis: "RingCast: Lwt threads running the protocol"
maintainer: "TG x Thoth <*@tg-x.net>"
authors: ["TG x Thoth <*@tg-x.net>"]
tags: [ "p2p" "multicast" "protocol" "ring" ]
license: "AGPL-3.0-only"
homepage: "https://p2pcollab.net"
doc: "https://p2pcollab.net/doc/ocaml/p2p-poldercast-lwt"
dev-repo: "git+https://github.com/p2pcollab/ocaml-poldercast.git"
bug-reports: "https://github.com/p2pcollab/ocaml-poldercast/issues"
depends:
[
  "dune" {build & >= "1.0.0"}
  "ounit" {with-test}
  "nocrypto.lwt" {with-test}
  "p2p-poldercast" {with-test}
  "p2p-poldercast-lwt" {with-test}
  "p2p-ringcast" {with-test}
  "p2p-ringcast-lwt" {with-test}
  "lwt"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
