(*
  SPDX-FileCopyrightText: 2019 TG x Thoth
  SPDX-License-Identifier: AGPL-3.0-only
*)

opam-version: "2.0"
name: "p2p-vicinity-lwt"
synopsis: "VICINITY: Lwt threads running the protocol"
maintainer: "TG x Thoth <*@tg-x.net>"
authors: ["TG x Thoth <*@tg-x.net>"]
tags: [ "p2p" "overlay" "topology" "management" "clustering" "protocol" ]
license: "AGPL-3.0-only"
homepage: "https://p2pcollab.net"
doc: "https://p2pcollab.net/doc/ocaml/p2p-vicinity-lwt"
dev-repo: "git+https://github.com/p2pcollab/ocaml-p2p.git"
bug-reports: "https://github.com/p2pcollab/ocaml-p2p/issues"
depends:
[
  "dune" {build & >= "1.0.0"}
  "ounit" {with-test}
  "nocrypto.lwt" {with-test}
  "p2p-vicinity"
  "lwt"
  "lwt_ppx"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
