opam-version: "2.0"
name: "p2p-vicinity"
synopsis: "VICINITY: P2P topology management & clustering protocol"
maintainer: "TG x Thoth <*@tg-x.net>"
authors: ["TG x Thoth <*@tg-x.net>"]
tags: [ "p2p" "overlay" "topology" "management" "clustering" "protocol" ]
license: "AGPL-3.0-only"
homepage: "https://p2pcollab.net"
doc: "https://p2pcollab.net/doc/ocaml/p2p-vicinity"
dev-repo: "git+https://github.com/p2pcollab/ocaml-p2p.git"
bug-reports: "https://github.com/p2pcollab/ocaml-p2p/issues"
depends:
[
  "dune" {build & >= "1.0.0"}
  "ounit" {with-test}
  "nocrypto.unix" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
