(library
 (name        p2p_poldercast_lwt)
 (public_name p2p-poldercast-lwt)
 (libraries   p2p
              p2p-poldercast
              p2p-ringcast
              p2p-ringcast-lwt
              p2p-vicinity
              p2p-vicinity-lwt
              p2p-cyclon
              p2p-cyclon-lwt
              lwt
              lwt.unix)
 (preprocess  (pps lwt_ppx)))
